crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_view_vector_search_sql_vectors_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(_score, 2) as _score  FROM vector_search(qs_view, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                             |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs_view, Utf8("second"), answer).id DESC NULLS FIRST, fetch=4                                                                                                                                                                                                                                                       |
|               |   Projection: vector_search(qs_view, Utf8("second"), answer).id, vector_search(qs_view, Utf8("second"), answer).answer, array_length(vector_search(qs_view, Utf8("second"), answer).answer_embedding), trunc(vector_search(qs_view, Utf8("second"), answer)._score, Int64(2)) AS _score                                                                          |
|               |     TableScan: vector_search(qs_view, Utf8("second"), answer) projection=[_score, answer, answer_embedding, id]                                                                                                                                                                                                                                                  |
| physical_plan | SortPreservingMergeExec: [_score@3 DESC, id@0 DESC], fetch=4                                                                                                                                                                                                                                                                                                     |
|               |   SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                                                                         |
|               |     ProjectionExec: expr=[id@0 as id, answer@3 as answer, array_length(answer_embedding@1) as array_length(vector_search(qs_view, Utf8("second"), answer).answer_embedding), trunc(_score@2, 2) as _score]                                                                                                                                                       |
|               |       AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(answer_embedding) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_embedding, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer] |
|               |         RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                                                                                                                                                                                                                        |
|               |           AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(answer_embedding) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_embedding, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer]      |
|               |             ProjectionExec: expr=[union_extract(json_get(key@2, id), int) as id, _spice.search_field@0 as _spice.search_field, data@1 as answer_embedding, 1 - distance@3 as _score]                                                                                                                                                                             |
|               |               BytesProcessedExec                                                                                                                                                                                                                                                                                                                                 |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                             |
|               |                   S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                                                                                                                   |
|               |                                                                                                                                                                                                                                                                                                                                                                  |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
