crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_view_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp, round_scores)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.34",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "The presence of fibrinolysin in the reagents can partially o"
        ]
      },
      "primary_key": {
        "id": 938
      }
    },
    {
      "_score": "0.30",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          " properties, possibly due to their high tannin content"
        ]
      },
      "primary_key": {
        "id": 1015
      }
    },
    {
      "_score": "0.29",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          " Late recurrences can occur beyond 10 years, so patients requir"
        ]
      },
      "primary_key": {
        "id": 551
      }
    },
    {
      "_score": "0.29",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "stemic vascular resistance (SVR) by causing vasodilation."
        ]
      },
      "primary_key": {
        "id": 1035
      }
    }
  ]
}
