crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_metadata_with_where_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
      "_score": "[score]",
      "dataset": "qs",
      "matches": {
        "answer": [
          "stemic vascular resistance (SVR) by causing vasodilation."
        ]
      },
      "primary_key": {
        "id": 1035
      }
    },
    {
      "_score": "[score]",
      "dataset": "qs",
      "matches": {
        "answer": [
          " Late recurrences can occur beyond 10 years, so patients requir"
        ]
      },
      "primary_key": {
        "id": 551
      }
    }
  ]
}
