crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, trunc(_score, 2) FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                        |
|               |           ProjectionExec: expr=[_score@1 as _score, answer@2 as answer, id@0 as id]                                                                                                                                                 |
|               |             HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                                                                             |
|               |               CoalescePartitionsExec                                                                                                                                                                                                |
|               |                 AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score]                                                                   |
|               |                   RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                                                                                 |
|               |                     AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score]                                                                        |
|               |                       ProjectionExec: expr=[union_extract(json_get(key@0, id), int) as id, 1 - distance@1 as _score]                                                                                                                |
|               |                         BytesProcessedExec                                                                                                                                                                                          |
|               |                           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                      |
|               |                             S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                            |
|               |               SchemaCastScanExec                                                                                                                                                                                                    |
|               |                 BytesProcessedExec                                                                                                                                                                                                  |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                 |
|               |                                                                                                                                                                                                                                     |
