crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_vector_search_sql_no_score.snap
---
source: crates/runtime/tests/models/search.rs
expression: resp?
snapshot_kind: text
---
[
  {
    "id": 525,
    "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]"
  },
  {
    "id": 806,
    "answer": "1. Multiply 6 by 10: \\( 6 \\times 10 = 60 \\).\n2. Halve the result: \\( 60 \\div 2 = 30 \\).\n3. Thus, \\( 6 \\times 5 = \\boxed{30} \\)."
  },
  {
    "id": 1086,
    "answer": "To find the product of \\(5 \\times 5\\):\n1. Multiply the two numbers: \\(5 \\times 5 = 25\\).\n2. The result is \\(\\boxed{25}\\)."
  },
  {
    "id": 612,
    "answer": "1. Perform the division: \\(4 \\div 10 = 0.4\\).  \n2. The decimal \\(0.4\\) is expressed in words as \\(\\boxed{\\text{four tenths}}\\)."
  }
]
