crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                             |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer                                                       |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                  |
|               |     Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, vector_search(qs, Utf8("second"), answer)._score |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, id]                                                                       |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer]                                                                                                            |
|               |   SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[false]                                                              |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, _score@1 as _score]                                                                                    |
|               |       HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                |
|               |         CoalescePartitionsExec                                                                                                                                   |
|               |           AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score]      |
|               |             RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                    |
|               |               AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score]           |
|               |                 ProjectionExec: expr=[union_extract(json_get(key@0, id), int) as id, 1 - distance@1 as _score]                                                   |
|               |                   BytesProcessedExec                                                                                                                             |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                         |
|               |                       S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                               |
|               |         SchemaCastScanExec                                                                                                                                       |
|               |           BytesProcessedExec                                                                                                                                     |
|               |             DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                    |
|               |                                                                                                                                                                  |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------+
